--- a/wiki/osso.wikitext
+++ b/wiki/osso.wikitext
@@ -4,8 +4,29 @@
 
 ----
 ==Italian==
+===Noun===
+'''osso''' ''m'' (''plural'' [[ossa]], [[ossi]])
 
-#[[bone]]
+#[[bone]], [[skeleton]]
+# [[stone]] (in fruits)
+
+===Synonym===
+*[[nocciolo]] (2)
+
+===Related terms===
+*[[ossaccio]]
+*[[ossame]]
+*[[ossario]]
+*[[ossatura]]
+*[[osseina]]
+*[[osseo]]
+*[[osserello]]
+*[[ossetto]]
+*[[ossicino]]
+*[[ossifero]]
+*[[ossificazione]]
+*[[ossobuco]]
+*[[ossuto]]
 
 ----
 ==Portuguese==
