--- a/wiki/subject.wikitext
+++ b/wiki/subject.wikitext
@@ -1,9 +1,9 @@
 === Noun ===
-# (''Grammar'') the noun or noun phrase in a sentence that the sentence's meaning is about.
-# main [[topic]] of a paper, work of art, discussion, etc.
+# (''Grammar'') the noun or noun phrase in a sentence that the sentence's [[meaning]] is about.
+# main [[topic]] of a paper, work of [[art]], [[discussion]], etc.
 # topic studied in school, etc.
 #* Her favorite '''subject''' is Physics.
-# a citizen of a monarchy.
+# a citizen of a [[monarchy]].
 #* I am a British subject.
 
 
