--- a/wiki/ruler.wikitext
+++ b/wiki/ruler.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 #A measuring device with [[gradation]]s in [[unit]]s of [[measurement]]
-#A [[leader]] of a [[nation]]
+#A [[leader]] of a [[nation]], one who [[rule]]s
