--- a/wiki/straightforward.wikitext
+++ b/wiki/straightforward.wikitext
@@ -4,7 +4,7 @@
 
 '''straightforward'''
 
-#Proceeding in a straight course or manner; not deviating; honest; frank.
+#Proceeding in a straight course or manner; not deviating; [[honest]]; [[frank]].
 
 ===Adverb===
 
