--- a/wiki/earnest.wikitext
+++ b/wiki/earnest.wikitext
@@ -4,7 +4,7 @@
 
 '''earnest'''
 
-#Seriousness; reality; fixed determination; eagerness; intentness.
+#[[Serious]]ness; [[reality]]; fixed [[determination]]; [[eager]]ness; [[intent]]ness.
 #Something given, or a part paid beforehand, as a pledge; pledge; handsel; a token of what is to come.
 #Something of value given by the buyer to the seller, by way of token or pledge, to bind the bargain and prove the sale.
 
