--- a/wiki/earnest.wikitext
+++ b/wiki/earnest.wikitext
@@ -21,3 +21,6 @@
 #Ardent in the pursuit of an object; eager to obtain or do; zealous with sincerity; with hearty endeavor; heartfelt; fervent; hearty; -- used in a good sense; as, earnest prayers.
 #Intent; fixed closely; as, earnest attention.
 #Serious; important.
+
+===Proper noun===
+#A male name
