--- a/wiki/classification.wikitext
+++ b/wiki/classification.wikitext
@@ -4,4 +4,4 @@
 
 '''classification'''
 
-#The act of forming into a class or classes; a distibution into groups, as classes, orders, families, etc., according to some common relations or affinities.
+#The act of forming into a [[class]] or classes; a distibution into [[group]]s, as classes, orders, families, etc., according to some common [[relation]]s or affinities.
