--- a/wiki/attribute.wikitext
+++ b/wiki/attribute.wikitext
@@ -1,13 +1,11 @@
-==Pronunciation==
-===Verb===
-===Noun===
-==Verb==
-===Transitive===
-# To associate ownership or authorship with
-===Translations===
+==English==
+===Pronunciation===
+===Transitive verb===
+# To associate [[ownership]] or [[authorship]] with
+====Translations====
 *[[French]]: [[attribuer]]
-==Noun==
-# A characteristic or quality of a thing.
+===Noun===
+# A [[characteristic]] or [[quality]] of a thing.
 
 ====Translations====
 *[[Finnish]]: [[määrite]], [[attribuutti]]
