--- a/wiki/identical.wikitext
+++ b/wiki/identical.wikitext
@@ -1,4 +1,4 @@
 ==English==
-===Noun===
+===Adjective===
 #The exact [[equivalent]] of, bearing full likeness
-#(''biology'') a [[twin]] that shares the same genetic code, but is not the same individual
+#(''biology'') a [[twin]]s that share the same genetic code.
