--- a/wiki/identical.wikitext
+++ b/wiki/identical.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Adjective===
 #The exact [[equivalent]] of, bearing full likeness
-#(''biology'') a [[twin]]s that share the same genetic code.
+#(''biology'') [[twin]]s that share the same genetic code.
