--- a/wiki/measure.wikitext
+++ b/wiki/measure.wikitext
@@ -12,9 +12,9 @@ Of Middle English origin, from French '''[[mesure]]''', from Latin noun '''[[men
 ===Noun===
 '''measure''', plural '''[[measures]]'''
 
-#the quantity, size, weight, distance or capacity of a substance compared to a designated standard
+#the [[quantity]], [[size]], [[weight]], [[distance]] or [[capacity]] of a [[substance]] compared to a designated [[standard]]
 #the precise designated distance between two objects or points
-#the act of measuring
+#the act of [[measuring]]
 #a musical designation consisting of all notes and or rests delineated by two vertical bars; an equal and regular division of the whole of a composition
 
 ===Verb===
