--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -3,11 +3,11 @@
 '''point'''
 
 # A [[location]] or place.
-# An event which is dramatic or affirms something.
-# The sharp tip of an object.
-# The name of the symbol '''.''' used to separate a whole number from a decimal fraction: ''10.5'' (ten point five) = ten and a half.
-# An opinion which adds (or supposedly adds) to the discussion.
-# (''games'') ''The one with the most points will win the game''
+# An [[event]] which is dramatic or affirms something.
+# The sharp [[tip]] of an [[object]].
+# The name of the [[symbol]] '''.''' used to separate a whole number from a decimal fraction: ''10.5'' (ten point five) = ten and a half.
+# An opinion which adds (or supposedly adds) to the [[discussion]].
+# (''games'') A measure of [[success]] or [[failure]] in a [[game]]. ''The one with the most points will win the game''
 
 ====Related terms====
 *[[pointer]]
