--- a/wiki/ennui.wikitext
+++ b/wiki/ennui.wikitext
@@ -3,5 +3,15 @@
 '''ennui'''
 # To be [[bored]]/ the feeling of being bored, by something [[tedious]].
 
+----
+
 ==French==
-#boredom
+===Noun===
+'''ennui''' ''m''
+
+#[[anxiety]], [[annoyance]], [[worry]] 
+#[[boredom]]
+
+===Related terms===
+*[[ennuyer]]
+*[[ennuyeux]]
