--- a/wiki/failure.wikitext
+++ b/wiki/failure.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
-#Not [[succeeding]], having the status of [[loser]]
+#Not [[succeeding]], having the status of [[loser]], not attaining a [[goal]]
 #A person who is generally believed to be incapable of [[success]]
