--- a/wiki/success.wikitext
+++ b/wiki/success.wikitext
@@ -1,8 +1,8 @@
 ===Noun===
 
-# the achievement of one's aim or goal. (''His third attempt to pass the entrance exam was a success.'')
+# the achievement of one's aim or [[goal]]. (''His third attempt to pass the entrance exam was a success.'')
 # (''Business'') financial profitability.
-# one who achieves his goals. (''Scholastically, he was a success.'')
+# one who achieves his or her goals. (''Scholastically, he was a success.'')
 
 ====Translations====
 *German: [[Erfolg]] ''m'' (1, 2)
