--- a/wiki/earn.wikitext
+++ b/wiki/earn.wikitext
@@ -1,3 +1,7 @@
+==English==
+===Verb===
+#to gain [[success]] through applied [[effort]] or [[work]]
+
 ==Old English==
 ===Noun===
 '''earn, [[Wiktionary Appendix:Old English strong declension|-es]]''' ''m''
