--- a/wiki/point.wikitext
+++ b/wiki/point.wikitext
@@ -22,6 +22,7 @@
 *Hebrew: [[נקודה]] ''f''
 *[[Interlingua]]: [[puncto]] (1), [[puncta]] (2)
 *{{ga}}: [[pointe]]
+*Italian: [[punto]], [[virgola]], [[punta]]
 *Japanese: [[点]] ([[てん]], ten)
 *Portuguese: [[ponto]] ''m'' (1), [[ponta]] ''f'' (2)
 *Spanish: [[punto]] ''m''
