--- a/wiki/person.wikitext
+++ b/wiki/person.wikitext
@@ -2,10 +2,12 @@
 ===Pronunciation===
 
 ===Noun===
-#Human being; individual
-#Specific human. ''Where is the person?''
-#Body <!-- needs revising; also is this a legal term? -->
+#[[Human being]]; [[individual]]
+#Specific [[human]]. ''Where is the person?''
+#[[Body]] <!-- needs revising; also is this a legal term? -->
 #:''I have no money on my person''
+#Anything having legal equivalence to a human being.
+#:''According to the Supreme Court of the United States, a [[corporation]] is legally entitled to the rights of a person.''
 
 ====Quotations====
 * (2): ''Meanwhile, the dazed Sullivan, dressed like a bum with no identification on his '''person''', is arrested and put to work on a brutal Southern chain gang.''  - ''New York Times'', 2004
@@ -14,7 +16,7 @@
 
 ====Plurals====
 
-[[People]], persons
+[[People]], [[persons]]
 
 ====Translations====
 *Arabic: [[شَخص]] (ʃaxsˁ) (1)
