--- a/wiki/corporation.wikitext
+++ b/wiki/corporation.wikitext
@@ -1,10 +1,11 @@
+==English==
 ===[[Pronunciation]]===
 Syllables
 cor·po·ra·tion
 
 ===[[Etymology]]===
 Latin ''cor-'' from ''con'' + ?
-
+===Noun===
 #An incorporated [[company]].
 #The public authority in certain municipal [[boroughs]] of England.
 #In Fascist Italy, a joint association of employers' and workers' representatives.
