--- a/wiki/commercial.wikitext
+++ b/wiki/commercial.wikitext
@@ -3,4 +3,4 @@
 #An [[advertisement]] in a common [[media]] format, usually [[television]].
 
 ===Adjective===
-#A [[money]] making endeavor that involves a [[corporation]] or other formalized group of [[workers]] and [[management]] [[work]]ing toward the production of [[goods]] or [[services]] to participate in an [[economy]]
+#A [[money]] making endeavor that involves a [[corporation]] or other formalized group of [[worker]]s and [[management]] [[work]]ing toward the production of [[goods]] or [[services]] to participate in an [[economy]]
