--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -5,7 +5,7 @@ Latin
 ===Noun===
 '''datum''' (Plural: [[data]])
 
-# (''archaic'' or ''pedantic'') a piece of information
+# (''archaic'' or ''pedantic'') a single piece of [[information]]
 
 ----
 
