--- a/wiki/ruler.wikitext
+++ b/wiki/ruler.wikitext
@@ -1,4 +1,13 @@
 ==English==
 ===Noun===
+'''ruler'''
+
 #A measuring device with [[gradation]]s in [[unit]]s of [[measurement]]
 #A [[leader]] of a [[nation]], one who [[rule]]s
+
+===Translations===
+:'''device'''
+*Chinese: [[尺]], [[直尺]]
+*French: [[règle]] ''f''
+*Italian: [[righello]] ''m''
+*Japanese: [[定規]]
