--- a/wiki/challenge.wikitext
+++ b/wiki/challenge.wikitext
@@ -3,5 +3,5 @@
 #An [[instigation]] or [[antagonization]] intended to convince a [[person]] to perform an [[action]] they otherwise would not.
 #A [[difficult]] [[task]]
 
-==Verb==
+===Verb===
 #To instigate or antagonize in order to convince a person to do something
