--- a/wiki/circumstance.wikitext
+++ b/wiki/circumstance.wikitext
@@ -4,10 +4,10 @@
 
 '''circumstance'''
 
-#That which attends, or relates to, or in some way affects, a fact or event; an attendant thing or state of things.
-#An event; a fact; a particular incident.
-#Circumlocution; detail.
-#Condition in regard to worldly estate; state of property; situation; surroundings.
+#That which [[attend]]s, or [[relate]]s to, or in some way [[affect]]s, a [[fact]] or [[event]]; an attendant thing or [[state]] of things.
+#An event; a fact; a particular [[incident]].
+#Circumlocution; [[detail]].
+#Condition in regard to worldly estate; state of [[property]]; situation; surroundings.
 
 ===Verb===
 
