--- a/wiki/property.wikitext
+++ b/wiki/property.wikitext
@@ -1,15 +1,15 @@
 ==English==
 
 ===Noun===
-# (''uncountable'') Something owned.
+# (''uncountable'') Something [[own]]ed.
 #: ''Leave that book alone!  It's my property.''
-# A piece of land with a single owner.
+# A piece of [[land]] with a single owner.
 #: ''There is a large house on the property.''
-# An abstract quality associated with an object.
+# An abstract [[quality]] associated with an object.
 #: ''Matter can have many properties, including color, mass and density.''
-# (''computing'') An editable parameter associated with an application, or its value.
+# (''computing'') An editable [[parameter]] associated with an [[application]], or its value.
 #: ''You need to set the debugging property to "verbose".''
-# The exclusive right of possessing, enjoying, and disposing of a thing.
+# The exclusive right of [[possess]]ing, [[enjoy]]ing, and disposing of a [[thing]].
 
 ====Translations====
 *Finnish: [[omaisuus]] (1), [[tontti]] (2), [[ominaisuus]] (3), [[asetus]] (4)
