--- a/wiki/possess.wikitext
+++ b/wiki/possess.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Verb===
 #Indicating [[ownership]] of
-#(''theology'') Taking [[control]] of someone's [[body]] or [[mind]]
+#Taking [[control]] of someone's [[body]] or [[mind]]
