--- a/wiki/ownership.wikitext
+++ b/wiki/ownership.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#The state of having complete [[legal]] control of the status of something.
+#The state of having complete [[legal]] [[control]] of the status of something.
