--- a/wiki/geography.wikitext
+++ b/wiki/geography.wikitext
@@ -6,7 +6,7 @@ Greek ''geographia'', from ''geos'' [[earth]] + ''graphia'' ([[-graphy]])
 '''geography''' (''uncountable'')
 
 <!-- #The graphing or measuring of earth studies, and land. is this an old meaning, or just the literal one?-->
-#The study of the physical structure and inhabitants of the Earth.
+#The study of the physical [[structure]] and inhabitants of the [[Earth]].
 
 ====Derived terms====
 *[[geographer]]
