--- a/wiki/Pluto.wikitext
+++ b/wiki/Pluto.wikitext
@@ -12,7 +12,7 @@
 *French: [[pluton]] ''m'' (2)
 *German: Pluto ''m'' (2)
 *Greek, Ancient: [[Πλούτων]] (Plutōn) (1)
-*Japanese: [[冥王星]] (めいおうせい)(2)
+*Japanese: [[冥王星]] (めいおうせい, meiousei)(2)
 *Latin: [[Pluto]], [[Pluton]] (1)
 *{{ms}}: [[Pluto]] (2)
 *{{pl}}: [[pluton]] ''m''
