--- a/wiki/Venus.wikitext
+++ b/wiki/Venus.wikitext
@@ -13,6 +13,7 @@
 *Finnish: Venus (2)
 *German: Venus ''f''
 *Lithuanian: [[Venera]] ''f''
+*Japanese: [[金星]] (きんせい, kinsei), [[ビーナス]] (bi-nasu)
 *{{ms}}: [[Zuhrah]] (2)
 *{{pl}}: [[Wenus]] ''f'' (1,2)
 *[[Romanica]]: Venus ''f''
