/* Translations */ *Estonian: [[Saturnus]] (1), Saturn (2) <Saturn#39728>

--- a/wiki/Saturn.wikitext
+++ b/wiki/Saturn.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 *Dutch: [[Saturnus]] ''n''
+*Estonian: [[Saturnus]] (1), Saturn (2)
 *Finnish: [[Saturnus]] (2)
 *French: [[saturne]] ''m''
 *German: Saturn ''m''
