--- a/wiki/Uranus.wikitext
+++ b/wiki/Uranus.wikitext
@@ -14,13 +14,12 @@ Second declension
 
 ==== Translations ====
 *Dutch: [[uranus]] ''n'' (3)
-*Estonian: [[Uraan]]
+*Estonian: [[Uranos]] (1, 2), [[Uraan]] (3)
 *Finnish: [[Uranos]] (1, 2), '''Uranus''' (3)
 *French: [[uranus]] ''m'' (3)
 *German: [[Uranus]] ''m''
 *Greek: [[Uranos]] ''m''
 *Japanese: [[天王星]]（てんおうせい, tenousei）(3)
-
 *Latin: [[Uranus]] ''m''
 *Lithuanian: [[Uranas]] ''m''
 *{{ms}}: [[Uranus]] (3)
