--- a/wiki/Neptune.wikitext
+++ b/wiki/Neptune.wikitext
@@ -11,7 +11,7 @@
 *Finnish: [[Neptunus]] (1, 2)
 *French: [[neptune]] ''m''
 *German: [[Neptun]] ''m''
-*Japanese: [[海王星]] (かいおうせい, kaiousei)
+*Japanese: [[海王星]] (かいおうせい, kaiousei), [[ネプチューン]] (nepuchu-n)
 *Lithuanian: [[Neptūnas]] ''m''
 *{{ms}}: [[Neptun]] (2)
 *{{pl}}: [[Neptun]] ''m'' (1, 2)
