--- a/wiki/Neptune.wikitext
+++ b/wiki/Neptune.wikitext
@@ -8,6 +8,7 @@
 
 ==== Translations ====
 *Dutch: [[neptunus]] ''n''
+*Estonian: [[Neptunus]] (1), [[Neptun]] (god in equator-crossing ceremonies), [[Neptuun]] (2) 
 *Finnish: [[Neptunus]] (1, 2)
 *French: [[neptune]] ''m''
 *German: [[Neptun]] ''m''
