--- a/wiki/star.wikitext
+++ b/wiki/star.wikitext
@@ -27,7 +27,7 @@
 *Indonesian: [[bintang]] (1,3)
 *Interlingua: [[stella]] (1,2,3)
 *Italian: [[stella]] ''f''
-*Japanese: [[星]] ([[ほし]], hoshi), [[恒星]] (こうせい) (1)
+*Japanese: [[星]] ([[ほし]], hoshi), [[恒星]] (こうせい, kousei) (1)
 *Korean: [[별]] (byeol)
 *Latin: [[stella]] ''f''
 *Persian: [[ستاره]] (setareh)
