--- a/wiki/electricity.wikitext
+++ b/wiki/electricity.wikitext
@@ -9,6 +9,7 @@
 *'''Bulgarian''': [[електричество]] ''n''
 *'''French''': [[électricité]] ''f''
 *'''German''': [[Elektrizität]] ''f''
+*'''Japanese''': [[電気]] (でんき, denki)
 *'''Portuguese''': [[Eletrecidade]]
 *'''Russian''': [[электричество]] ''n''
 
