--- a/wiki/aah.wikitext
+++ b/wiki/aah.wikitext
@@ -18,7 +18,7 @@ As an interjection the word is pronounced basically the same way as the interjec
 # Expression of joy and/or pleasure. 
 
 ====Morphology====
-*Plural: ''aahs''.
+*Plural: [[aahs]].
 
 ====Translations====
 *Estonian: [[ahhetus]]
@@ -29,10 +29,10 @@ As an interjection the word is pronounced basically the same way as the interjec
 # to express joy or pleasure, especially by the interjection '''aah'''
 
 ====Morphology====
-*Past: ''aahed''. 
-*Past participle: ''aahed''. 
-*Present participle: ''aahing''.
-*Third person present singular: ''aahs''.
+*Past: [[aahed]]. 
+*Past participle: [[aahed]]. 
+*Present participle: [[aahing]].
+*Third person present singular: [[aahs]].
 
 ====Usage====
 Usually the verb is intransitive. The object of feelings usually is indicated by the prepositions [[over]] or [[at]]; sometimes it occurs as a direct object, especially in passive constructions. 
