--- a/wiki/aah.wikitext
+++ b/wiki/aah.wikitext
@@ -37,9 +37,9 @@ As an interjection the word is pronounced basically the same way as the interjec
 ====Usage====
 Usually the verb is intransitive. The object of feelings usually is indicated by the prepositions [[over]] or [[at]]; sometimes it occurs as a direct object, especially in passive constructions. 
 
-Very often the word is used together with some other verb derived from an interjection. The most common combination is ''to [[ooh]] and aah''. Perhaps it should regarded as a separate lexical item.  
+Very often the word is used together with some other verb derived from an interjection. The most common combination is ''to [[ooh]] and aah''. Perhaps it should be regarded as a separate lexical item.  
 
-The word belongs to the informal style.    
+The word belongs to the informal style.
 
 ====Translations====
 *Estonian: [[ahhetama]] (1)
