--- a/wiki/slug.wikitext
+++ b/wiki/slug.wikitext
@@ -1,10 +1,13 @@
 ==English==
 ===Noun===
-# [[snail]] without a [[shell]]
+# a [[gastropod]] without a [[shell]]
 # the rarely used customary unit of [[mass]]
 # a [[bullet]]
 # a counterfeit [[coin]], especially one used to steal from vending machines
 # (''Slang'') A [[lazy]] person, a [[sluggard]]
+
+====Related words====
+*(1) [[snail]]
 
 ====Translations====
 *[[Albanian]]: [[ligavec]] (1)
