--- a/wiki/Neptune.wikitext
+++ b/wiki/Neptune.wikitext
@@ -12,6 +12,7 @@
 *Finnish: [[Neptunus]] (1, 2)
 *French: [[neptune]] ''m''
 *German: [[Neptun]] ''m''
+*Italian: [[Nettuno]] ''m''
 *Japanese: [[海王星]] (かいおうせい, kaiousei), [[ネプチューン]] (nepuchu-n)
 *Lithuanian: [[Neptūnas]] ''m''
 *{{ms}}: [[Neptun]] (2)
