--- a/wiki/hypercomplex_number.wikitext
+++ b/wiki/hypercomplex_number.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''complex number''' (''plural'' '''complex numbers''')
+'''hypercomplex number''' (''plural'' '''hypercomplex numbers''')
 
 #(''mathematics'') A [[complex number]] consisting of multiple square roots of negative one, creating multiple simulated dimensions.
 
