--- a/wiki/square_root.wikitext
+++ b/wiki/square_root.wikitext
@@ -15,4 +15,4 @@
 ====See also====
 *[[cube root]]
 *[[root]]
-*[[en:Square_root|Wikipedia article on square roots]]
+*[[w:en:Square_root|Wikipedia article on square roots]]
