--- a/wiki/hypercomplex_number.wikitext
+++ b/wiki/hypercomplex_number.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''hypercomplex number''' (''plural'' '''hypercomplex numbers''')
 
-#(''mathematics'') A [[complex number]] consisting of multiple square roots of negative one, creating multiple simulated [[dimension]]s.
+#(''mathematics'') A [[complex number]] consisting of multiple [[square root]]s of negative one, creating multiple simulated [[dimension]]s.
 
 ===Types===
 *[[quaternion]]
