--- a/wiki/depth.wikitext
+++ b/wiki/depth.wikitext
@@ -1,5 +1,10 @@
+==English==
 === Noun ===
 '''depth'''
+#[[height]] below a [[surface]]
+#(''colors'') total [[palette]] of available [[color]]s
+#[[complexity]]
+#[[distance]] from an observer in a [[microgravity]] perspective
 
 ====Related terms====
 *[[deep]]
