--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -4,4 +4,4 @@
 #To humbly [[beg]] a person for [[aid]] or their [[time]].
 
 ====Translations====
-Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
+*Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
