--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -2,6 +2,7 @@
 ===Verb===
 #To [[petition]] or [[solicit]] help from a [[supernatural]] or higher being.
 #To humbly [[beg]] a person for [[aid]] or their [[time]].
+#(''Christianity'') to [[talk]] to [[God]] for any reason.
 
 ====Translations====
 *Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
