--- a/wiki/familia.wikitext
+++ b/wiki/familia.wikitext
@@ -1,10 +1,16 @@
-== [[Spanish]] noun, ''f'' ==
+==Spanish==
+
+===Noun===
+'''familia''' ''f''
+
+# [[family]]
+
 ===Translations===
-* Danish: [[familie]] ''c''
-*[[English]]: [[family]]
-*[[Esperanto]]: [[familio]]
-*[[French]]: [[]]
-*[[Interlingua]]: familia
-*[[Italian]]: [[]]
-*[[Latin]]: familia
-*[[Portuguese]]: [[família]]
+*Danish: [[familie]] ''c''
+*English: [[family]]
+*Esperanto: [[familio]]
+*French: [[famille]]
+*Interlingua: familia
+*Italian: [[famiglia]]
+*Latin: familia
+*Portuguese: [[família]]
