--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -38,6 +38,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 {|
 *Italian: [[tavola]] ''f''
 *Latin: [[mensa#Latin|mensa]] ''f''
+*[[Polish]]: stół ''m''
 *Portuguese: [[mesa#Portuguese|mesa]] ''f''
 *[[Romanica]]: [[mensa#Romanica|mensa]] ''f''
 *Slovene: [[miza]] ''f''
@@ -67,6 +68,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *Finnish: [[taulukko]]
 *French: [[tableau#French|tableau]] ''m''
 *German: [[Tabelle]] 
+*[[Polish]]: tabela ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -81,6 +83,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 {|
 *Dutch: [[tafel]] ''f'', [[vermenigvuldigingstafels]] ''f plural'', [[rekentafels]] ''f plural''
 *Finnish: [[taulu]], [[taulukko]]
+*[[Polish]]: tabela ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
