--- a/wiki/up.wikitext
+++ b/wiki/up.wikitext
@@ -2,7 +2,7 @@
 
 === Adverb ===
 
-# Away from the center of the earth.
+# [[Away]] from the center of the [[earth]].
 #: ''I looked up and saw the airplane overhead''
 
 ====Related terms====
@@ -11,7 +11,7 @@
 
 === Preposition ===
 
-# Toward the top of.
+# Toward the [[top]] of.
 #: ''The cat went up the tree.''
 
 ====Related terms====
@@ -27,7 +27,7 @@
 
 === Noun ===
 
-# The direction away from the center of the earth.
+# The [[direction]] away from the [[center]] of the earth.
 #: ''Up is a good way to go.''
 
 ===Related terms===
