--- a/wiki/direction.wikitext
+++ b/wiki/direction.wikitext
@@ -2,13 +2,12 @@
 
 === Noun ===
 
-# An indication of the point toward which an object is moving.
+# An indication of the [[point]] [[toward]] which an object is [[moving]].
 #: ''Keep going in the same direction.''
-# An indication of what to do.
+# An [[indication]] of what to do.
 #: ''The trombonist looked to the bandleader for direction.''
 # (''cinema, theater'') The work of the [[director]].
 #: ''The screenplay was good, but the direction was weak.''
-
 
 === Examples ===
 
