--- a/wiki/up.wikitext
+++ b/wiki/up.wikitext
@@ -14,6 +14,9 @@
 # Toward the [[top]] of.
 #: ''The cat went up the tree.''
 
+====Translations====
+*Japanese: [[上]] (うえ, ue)
+
 ====Related terms====
 
 *[[up to]]
