--- a/wiki/idol.wikitext
+++ b/wiki/idol.wikitext
@@ -4,4 +4,4 @@
 
 '''idol'''
 
-#An graven [[image]] or [[representation]] of anything that is [[revered]], or believed to convey spiritual power.
+#A graven [[image]] or [[representation]] of anything that is [[revered]], or believed to convey spiritual power.
