--- a/wiki/idol.wikitext
+++ b/wiki/idol.wikitext
@@ -5,3 +5,4 @@
 '''idol'''
 
 #A graven [[image]] or [[representation]] of anything that is [[revered]], or believed to convey spiritual power.
+#A cultural [[icon]], or especially popular [[person]]
