--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -1,8 +1,21 @@
 ==English==
+===Pronunciation===
+*IPA: /ˈpɹeɪ/
+====Homophone====
+*[[prey]]
+
 ===Verb===
+'''pray'''
+
 #To [[petition]] or [[solicit]] help from a [[supernatural]] or higher being.
 #To humbly [[beg]] a person for [[aid]] or their [[time]].
 #(''Christianity'') to [[talk]] to [[God]] for any reason.
 
 ====Translations====
+*Chinese: [[祈祷]], [[祷告]]
+*French: [[prier]]
+*Italian: [[pregare]]
 *Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
+
+===Related terms===
+*[[prayer]]
