--- a/wiki/graphic.wikitext
+++ b/wiki/graphic.wikitext
@@ -1,7 +1,8 @@
+==English==
 === Adjective ===
 '''graphic'''
 
-# drawn, pictorial.
+# a [[drawing]] or [[picture]].
 
 ====Related terms====
 *[[graph]]
