--- a/wiki/graphic.wikitext
+++ b/wiki/graphic.wikitext
@@ -1,6 +1,10 @@
 ==English==
 === Adjective ===
 '''graphic'''
+#[[vivid]], [[descriptive]]
+
+===Noun===
+'''graphic'''
 
 # a [[drawing]] or [[picture]].
 
