--- a/wiki/graphic.wikitext
+++ b/wiki/graphic.wikitext
@@ -2,6 +2,7 @@
 === Adjective ===
 '''graphic'''
 #[[vivid]], [[descriptive]]
+#[[grotesque]] or otherwise [[repulsive]]
 
 ===Noun===
 '''graphic'''
