--- a/wiki/visceral.wikitext
+++ b/wiki/visceral.wikitext
@@ -1,9 +1,11 @@
-'''Adj'''
-== Visceral ==
+==English==
+===Etymology===
+*Historically having to do with the [[spleen]], and related parts of the body ([[viscera]]) which were have been at times felt to be active in this sort of intuitive feeling.
 
-Having to do with the body as opposed to the [[intellect]],as in the distinction between thinking and feeling. Often explained as [[intuition]].
+===Adjective===
+#Having to do with the response of the [[body]] as opposed to the [[intellect]], as in the distinction between thinking and feeling.  Often described as [[intuition]].
+#Indicating extreme degree of negative emotion, for example:
+#:''That smell is viscerally [[repugnant]].''
 
-Historically having to do with the [[spleen]], and related parts of the body which were have been at times felt to be active in this sort of intuitive feeling.
-
-===Translations===
+====Translations====
 *[[Romanica]]: [[visceral]]
