--- a/wiki/intellect.wikitext
+++ b/wiki/intellect.wikitext
@@ -2,11 +2,11 @@
 ===Noun===
 '''intellect''' ''(countable and uncountable)'', plural '''[[intellects]]'''
 
-# faculty of knowing and reasoning; understanding ''(uncountable)''
+# faculty of [[knowing]] and [[reason]]ing; [[understand]]ing ''(uncountable)''
 #: ''Intellect is one of man's greatest powers.''
-# that faculty in a particular person ''(countable)''
+# that faculty in a particular [[person]] ''(countable)''
 #: ''They were chosen because of their outstanding intellects.''
-# a person who has that faculty in great degree
+# a person who has that faculty in great [[degree]]
 #: ''Some of the world's leading intellects were meeting there.''
 
 ====Etymology====
