--- a/wiki/understood.wikitext
+++ b/wiki/understood.wikitext
@@ -19,4 +19,4 @@
 
 === Translations ===
 *[[Dutch]]: [[verstaan]], [[begrepen]]
-*Japanese: [[分かた]] (わかた, wakata)
+*Japanese: [[分かた]] (わかた, wakata), [[了解]] (りょうかい, ryoukai)
