--- a/wiki/picture.wikitext
+++ b/wiki/picture.wikitext
@@ -1,8 +1,9 @@
+==English==
 === Noun ===
 
-#representation of the reality we can see on paper, stone, sand, ...
-#photographic representation of visible reality
-#The pictures: the movies, cinema
+#the representation of the [[reality]] we can [[see]]
+#a photographic or reproduced representation of [[visible]] reality on [[paper]], [[stone]], [[sand]], ...
+#The pictures: the [[movies]], [[cinema]]
 
 ====Translations====
 
