--- a/wiki/image.wikitext
+++ b/wiki/image.wikitext
@@ -10,6 +10,7 @@
 *{{fi}}: [[kuva]]
 *[[French]]: [[image]] ''f''
 *[[German]]: [[Bild]] ''n''
+*{{ja}}: [[イメージ]] (ime-ji)
 *{{nl}}: [[beeld]]
 *[[Spanish]]: [[imagen]] ''f''
 *[[Portuguese]]:[[imagem, figura, fotografia]]
