--- a/wiki/MUD.wikitext
+++ b/wiki/MUD.wikitext
@@ -1,9 +1,3 @@
 ==English==
-
-===Etymology===
-From '''''M'''ulti-'''U'''ser '''D'''ungeon''
-
-===Acronym===
-'''MUD'''
-
-# An interactive online environment in which players may jointly engage in [[fantasy role-playing games]].
+===Noun===
+#A mixture of [[water]] and [[dirt]].
