--- a/wiki/volcanic.wikitext
+++ b/wiki/volcanic.wikitext
@@ -4,6 +4,6 @@
 
 '''volcanic'''
 
-#Of or pertaining to a volcano or volcanoes; as, volcanic heat.
-#Produced by a volcano, or, more generally, by igneous agencies; as, volcanic tufa.
-#Changed or affected by the heat of a volcano.
+#Of or pertaining to a [[volcano]] or volcanoes; as, volcanic heat.
+#Produced by a [[volcano]], or, more generally, by [[igneous]] agencies; as, volcanic [[tufa]].
+#Changed or affected by the [[heat]] of a volcano.
