+"dim of Margaret" <Meg#66839>

--- a/wiki/Meg.wikitext
+++ b/wiki/Meg.wikitext
@@ -1,6 +1,6 @@
 ==English==
-
 ===Proper noun===
 '''Meg'''
 
-# A [[diminutive]] of [[Megan]].
+#A [[diminutive]] of [[Margaret]].
+#A [[diminutive]] of [[Megan]].
