/* Transitive verb */ <water#3749998>

--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -203,6 +203,7 @@ The translations below need to be checked by native speakers and inserted into t
 #:''I need to go '''water''' the cattle''.
 #To pour water into the soil surrounding (plants).
 #:''Sally '''watered''' the plants''.
+#(''colloquial'') To [[urinate]].
 
 ====Translations====
 
