--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -17,7 +17,8 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 #(''in plural'') A sea belonging to particular country.
 #(''in plural'') Any body of water, such as a river or a lake.
 #:''He maketh me to lie down in green pastures: he leadeth me beside the still waters.'' '''Psalms 23:2'''
- 
+#(''colloquial'') [[Urine]].
+
 ====Translations====
 
 '''clear liquid H<small><sub>2</sub></small>O'''
