/* Translations */ +fi <ruler#66881>

--- a/wiki/ruler.wikitext
+++ b/wiki/ruler.wikitext
@@ -8,6 +8,7 @@
 ===Translations===
 :'''device'''
 *Chinese: [[尺]], [[直尺]]
+*{{fi}}: [[viivoitin]] (1), [[hallitsija]] (2)
 *French: [[règle]] ''f''
 *Italian: [[righello]] ''m''
 *Japanese: [[定規]]
