--- a/wiki/urine.wikitext
+++ b/wiki/urine.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Noun===
 '''urine''' ([[uncountable]])
 
-# Watery substance coming from the bladder.
+# Liquid [[excrement]] consisting of [[water]], [[salt]]s and [[urea]], which is made in the [[kidney]]s, stored in the [[bladder]], then released through the [[urethra]].
 
 ====Related terms====
 *[[urinal]]
