also without hyphen; +etym <tutti-frutti#66797>

--- a/wiki/tutti-frutti.wikitext
+++ b/wiki/tutti-frutti.wikitext
@@ -1,5 +1,11 @@
 ==English==
+===Etymology===
+Italian ''[[tutti]]'', all, ''frutti'', plural of ''[[frutto]]'', fruit<!--Is it called "tutti frutti" in Italian too?  If so, the etymology is "Italian, from ..."-->
+
 ===Noun===
-#[[Ice cream]] containing chopped candied fruits
+'''tutti-frutti''' ''or'' '''tutti frutti'''
+
+#A variety of [[ice cream]] that contains chopped [[candied fruit]].
+
 ====Translations====
 *Russian: [[мороженое с фруктами]] ''n'', [[фруктовое мороженое]] ''n''
