--- a/wiki/sly.wikitext
+++ b/wiki/sly.wikitext
@@ -9,6 +9,12 @@
 #Done with, and marked by, artful and dexterous secrecy; subtle; as, a sly trick.
 #Light or delicate; slight; thin.
 
+===Adjective===
+
+'''sly'''
+synonyms for word "sly"
+cunning, wily, shrewd, slim, artful, knowing, shifty, sharp, cunning
+
 ===Adverb===
 
 '''sly'''
