fix Japanese <fast#19491>

--- a/wiki/fast.wikitext
+++ b/wiki/fast.wikitext
@@ -11,7 +11,6 @@
 *French: [[jeûn]] ''m''
 *German: [[Fasten]] ''n''
 *Italian: [[digiuno]] ''m''
-*Japanese: [[早い]] (see: [[早]])
 *Mandarin: [[快]]
 *Swedish:  [[fasta]] ''c''
 
@@ -53,6 +52,7 @@
 *Finnish: [[nopea]] (1,2), [[kiinni]] (3)
 *French: [[rapide]] (1, 2)
 *German: [[schnell]] (1, 2)
+*Japanese: [[早い]] (はやい, hayai)
 *Italian: [[svelto]], [[rapido]], [[veloce]] (1, 2)
 *Romanian: [[rapid]] (1, 2), [[iute]] (1, 2), [[grăbit]] (1, 2)
 *Swedish: [[snabb]] (1,2), [[kvick]] (1,2), [[fäst]] (3)
@@ -76,6 +76,7 @@
 *French: [[rapidement]]
 *German: [[schnell]]
 *Italian: [[rapidamente]], [[velocemente]]
+*Japanese: [[早く]] (はやく, hayaku)
 *Swedish: [[snabbt]], [[kvickt]]
 *[[Tok Pisin]]: [[kwik]]
 
