fix Japanese <fast#19491>

--- a/wiki/fast.wikitext
+++ b/wiki/fast.wikitext
@@ -52,7 +52,7 @@
 *Finnish: [[nopea]] (1,2), [[kiinni]] (3)
 *French: [[rapide]] (1, 2)
 *German: [[schnell]] (1, 2)
-*Japanese: [[早い]] (はやい, hayai)
+*Japanese: [[早い]] (はやい, hayai) (1, 2)
 *Italian: [[svelto]], [[rapido]], [[veloce]] (1, 2)
 *Romanian: [[rapid]] (1, 2), [[iute]] (1, 2), [[grăbit]] (1, 2)
 *Swedish: [[snabb]] (1,2), [[kvick]] (1,2), [[fäst]] (3)
