--- a/wiki/rapid.wikitext
+++ b/wiki/rapid.wikitext
@@ -1,5 +1,6 @@
-==Noun==
+==English==
+===Noun===
 #a rough section of a river or stream which is difficult to navigate due to the swift and turbulent motion of the water.
 
-==Adjective==
+===Adjective===
 #to describe a process or concept which occurs quickly
