--- a/wiki/wash.wikitext
+++ b/wiki/wash.wikitext
@@ -5,6 +5,7 @@
 
 
 ===Translations===
+*{{ja}}: [[洗う]] (あらう, arau)
 *Persian: [[شستن]]  (shostan) 
 *Swedish: [[tvätta sig]]
 *[[Turkish]]: [[yıkamak]]
