--- a/wiki/poisonous.wikitext
+++ b/wiki/poisonous.wikitext
@@ -1,5 +1,8 @@
+==English==
+
 ===Adjective===
 '''poisonous''' (more poisonous, most poisonous)
+#Containing sufficient [[poison]] to be [[dangerous]]
 
 ====Synonyms====
 *[[toxic]]
