--- a/wiki/toxic.wikitext
+++ b/wiki/toxic.wikitext
@@ -1,5 +1,7 @@
+==English==
 ===Adjective===
 '''toxic''' (more toxic, most toxic)
+#Having a [[chemical]] nature that is [[harmful]] to [[health]] if consumed or otherwise entering into a [[body]].
 
 ====Synonyms====
 *[[poisonous]]
