--- a/wiki/venomous.wikitext
+++ b/wiki/venomous.wikitext
@@ -1,5 +1,8 @@
+==English==
+
 ===Adjective===
 '''venomous''' (more venomous, most venomous)
+#Characterizing a [[poison]]ous chemical that is wielded by an [[animal]]
 
 ====Synonyms====
 *[[poisonous]]
