--- a/wiki/toxicity.wikitext
+++ b/wiki/toxicity.wikitext
@@ -1,5 +1,7 @@
+==English==
 ===Noun===
 '''toxicity'''
+#Degree of [[toxin]] in relation to the amount a [[body]] can handle before being [[harm]]ed.
 
 ====Related terms====
 *[[toxic]]
