--- a/wiki/study.wikitext
+++ b/wiki/study.wikitext
@@ -11,6 +11,7 @@
 *French: [[étudier]]
 *German: [[studieren]], [[:de:lernen|lernen]]
 *Italian: [[studiare]]
+*{{ja}}: [[学ぶ]] (まなぶ, manabu)
 *Portuguese: [[estudar]]
 *Russian: [[изучать]] (izučát')
 *Spanish: [[estudiar]]
