--- a/wiki/study.wikitext
+++ b/wiki/study.wikitext
@@ -1,7 +1,7 @@
 ===Verb===
 '''to study'''
 
-# to acquire [[knowledge]] on a subject through [[concentration]]
+# to acquire [[knowledge]] on a subject through [[concentration]] on prepared learning materials
 
 ====Translations====
 *Chinese: traditional [[學習]], simplified [[学习]] (xuéxí); traditional [[學]], simplified [[学]] (xué)
