--- a/wiki/student.wikitext
+++ b/wiki/student.wikitext
@@ -16,7 +16,7 @@ From Latin ''[[studens]]'', present participle of ''[[studere]]'', '''study'''
 *French: [[étudiant]] ''m'', [[étudiante]] ''f'', [[élève]] ''m''/''f'' 
 *German: Student ''m'', [[Studentin]] ''f'', [[Schüler]] ''m'', [[Schülerin]] ''f''
 *Italian: [[studente]] ''m'' / [[studentessa]] ''f'', [[scolaro]] ''m'' / [[scolara]] ''f'', [[alunno]] ''m'' / [[alunna]] ''f''
-*Japanese: [[学生]], [[生徒]]
+*Japanese: [[学生]] (がくせい, gakusei), [[生徒]] (がくと, gakuto)
 *Latin: [[discipulus]] ''m'', [[discipula]] ''f''
 *Spanish: [[estudiante]] ''m/f'', [[alumno]] ''m'', [[alumna]] ''f''
 *Swedish: [[student#swedish|student]] ''c'', [[studentska]] ''c'' (''to stress it is a female'')
