--- a/wiki/alumna.wikitext
+++ b/wiki/alumna.wikitext
@@ -1,11 +1,13 @@
+==English==
+===Etymology===
+From Latin ''alumna''
+
 ===Noun===
 '''alumna''' (Plural: [[alumnae]])
 
 # a female [[pupil]] or [[student]] (especially of a [[university]] or [[college]])
 # a female [[graduate]]
 
-===Etymology===
-From Latin
-
 ===See also===
-#[[alumni]]
+*[[alumni]]
+*[[alumnus]]
