--- a/wiki/alumnus.wikitext
+++ b/wiki/alumnus.wikitext
@@ -1,3 +1,7 @@
+==English==
+===Etymology===
+From Latin alumnus
+
 ===Noun===
 '''alumnus''' (Plural: [[alumni]])
 
@@ -6,6 +10,6 @@
 # a student
 # a graduate
 
-From Latin
-
-See also: [[alumna]]
+===See also===
+*[[alumna]]
+*[[alumni]]
