--- a/wiki/alumni.wikitext
+++ b/wiki/alumni.wikitext
@@ -1,9 +1,12 @@
 ==English==
 
+===Etymology===
+From Latin alumni
+
 ===Noun===
 ''alumni''
 
-# Plural of [[alumnus]].
+# Plural of [[alumnus]].  Indicates both males and females.
 #: ''The alumni of this university include many famous artists and politicians.''
 
 ===Usage note===
