--- a/wiki/ward.wikitext
+++ b/wiki/ward.wikitext
@@ -1,5 +1,9 @@
-== Noun ==
+==English==
+=== Noun ===
+# Somewhere protected, like an area of a [[town]] or (more commonly) a [[room]] in a hospital where patients reside.
+# Someone you are looking after as a [[parent]].
+# A [[guard]].
+# An administrative district of some cities, especially in [[Japan]].
 
-# Somewhere protected, like an area of a town or (more commonly) a room in a hospital where patients reside.
-# Someone you are looking after as a parent.
-# A guard.
+====Translations====
+*{ja}: -[[区]] (-く, -ku) (4)
