--- a/wiki/ward.wikitext
+++ b/wiki/ward.wikitext
@@ -4,6 +4,7 @@
 # Someone you are looking after as a [[parent]].
 # A [[guard]].
 # An administrative district of some cities, especially in [[Japan]].
+#:''On our last visit to Tokyo, we went to Chiyoda ward and visited the Emperor's palace.''
 
 ====Translations====
 *{ja}: -[[区]] (-く, -ku) (4)
