--- a/wiki/guard.wikitext
+++ b/wiki/guard.wikitext
@@ -21,7 +21,7 @@
 *German: [[Schutz]] ''m''
 *Greek: [[φρουρά]]
 *Italian: [[protezione]] ''f''
-*Japanese: [[監視]]
+*{{ja}}: [[監視者]] (かんししゃ, kanshisha) (1)
 *Portuguese: [[protetor]] ''m''
 *Russian: [[предохранитель]] ''m''
 *Spanish: [[protector]] ''m''
