--- a/wiki/all.wikitext
+++ b/wiki/all.wikitext
@@ -23,7 +23,7 @@
 *Indonesian: [[segala]], [[segenap]], [[seluruh]], [[semua]]
 *[[Interlingua]]: [[tote]], [[omne]]
 *Italian: [[tutto]]
-*Japanese: [[すべて]] (subete), [[あらゆる]] (arayuru), [[全体]] ([[ぜんたい]], zentai), [[全]]～ ([[ぜん]], zen-) (used as prefix)
+*Japanese: [[全て]] (すべて, subete), [[あらゆる]] (arayuru), [[全体]] ([[ぜんたい]], zentai), [[全]]～ ([[ぜん]], zen-) (used as prefix)
 *Korean: [[다]] (da), [[모두]] (modu); [[Hanja]]: 전부 (全部 jeon-bu)
 *Latin: [[omnis]] ''m+f sg'', [[omne]] ''n sg'', [[omnes]] ''m+f pl'', [[omnia]] ''n pl''
 *[[Persian]]: [[هَم]] (hæm); [[هَمِه]] (hæme)
