--- a/wiki/every.wikitext
+++ b/wiki/every.wikitext
@@ -30,6 +30,7 @@
 *Dutch: [[ieder]], [[iedere]], [[elk]], [[elke]]
 *French: [[chaque]]
 *Finnish: [[jokainen]] (1), [[kaikki]] (1), [[joka]] (2)
+*{{ja}}: [[毎]] (まい, mai)
 *Slovak: [[každý]] ''m'', [[každá]] ''f'', [[každé]] ''n''
 *Spanish: [[cada]]
 *Turkish: [[her]], [[her bir]]
