--- a/wiki/volcano.wikitext
+++ b/wiki/volcano.wikitext
@@ -1,3 +1,22 @@
-==English==
+==English== 
 ===Noun===
+'''volcano'''
+
 #A [[mountain]] that contains a [[magma]] chamber attached to the [[mantle]] of the [[planet]] or [[moon]] and which periodically [[erupt]]s forth, usually explosively, with [[lava]] and volcanic [[gas]]es.
+
+===Translations===
+*French: [[volcan]] ''m''
+*Italian: [[vulcano]] ''m''
+*Japanese: [[火山]]
+
+===Related terms===
+*[[volcanic]]
+*[[volcanism]]
+*[[volcanology]]
+
+===See also===
+*[[crater]]
+*[[lava]]
+*[[lava flow]]
+*[[magma]]
+*[[vent]]
