--- a/wiki/puppet.wikitext
+++ b/wiki/puppet.wikitext
@@ -21,7 +21,7 @@
 *French: [[marionnette]] ''f''
 *German: [[Marionette]] ''f''
 *Greek: [[μαριονέτα]] ''f'' (marion&eacute;ta)
-*Japanese: [[パペット]]
+*Japanese: [[パペット]] (papetto), [[操り人形]] (ayatsuri ningyou)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
