--- a/wiki/fast.wikitext
+++ b/wiki/fast.wikitext
@@ -1,17 +1,18 @@
 ==English==
 ===Noun===
-'''unknown'''
+'''fast'''
 
 #A period of time when one does not [[eat]].
 
 ====Translations====
-* Danish: [[faste]] ''c''
+*Chinese: [[斋戒期]]
+*Danish: [[faste]] ''c''
 *Dutch: [[vasten]] ''m''
 *Finnish: [[paasto]]
 *French: [[jeûn]] ''m''
 *German: [[Fasten]] ''n''
 *Italian: [[digiuno]] ''m''
-*Mandarin: [[快]]
+*Japanese: [[断食]]
 *Swedish:  [[fasta]] ''c''
 
 ===Intransitive verb===
@@ -46,13 +47,14 @@
 *(3): [[loose]]
 
 ====Translations====
-* Danish: [[hurtig]] (1, 2 & 5); [[surret]] (3); [[farvefast]] (4)
+*Chinese: [[快的]]
+*Danish: [[hurtig]] (1, 2 & 5); [[surret]] (3); [[farvefast]] (4)
 *Dutch: [[snel]] (1, 2), [[vlug]] (1,2), [[rap]] (1,2), [[kwiek]] (1,2), [[gezwind]] (2), [[vast]] (3)
 *[[Esperanto]]: [[rapida]]
 *Finnish: [[nopea]] (1,2), [[kiinni]] (3)
 *French: [[rapide]] (1, 2)
 *German: [[schnell]] (1, 2)
-*Japanese: [[早い]] (はやい, hayai) (1, 2)
+*Japanese: [[速い]] ([[はやい]], hayai) (1, 2)
 *Italian: [[svelto]], [[rapido]], [[veloce]] (1, 2)
 *Romanian: [[rapid]] (1, 2), [[iute]] (1, 2), [[grăbit]] (1, 2)
 *Swedish: [[snabb]] (1,2), [[kvick]] (1,2), [[fäst]] (3)
@@ -76,17 +78,20 @@
 *French: [[rapidement]]
 *German: [[schnell]]
 *Italian: [[rapidamente]], [[velocemente]]
-*Japanese: [[早く]] (はやく, hayaku)
+*Japanese: [[速く]] ([[はやく]], hayaku)
 *Swedish: [[snabbt]], [[kvickt]]
 *[[Tok Pisin]]: [[kwik]]
 
 ----
+
 ==German==
 ===Adverb===
 '''fast'''
 
 # [[almost]], [[nearly]]
+
 ----
+
 ==Swedish==
 #Caught, unable to move freely
 #:'''Examples'''
