--- a/wiki/marionette.wikitext
+++ b/wiki/marionette.wikitext
@@ -14,6 +14,7 @@ From [[French]], ''la marionette''. One of the first figures to be made into a m
 *German: Marionette ''f''
 *[[Interlingua]]: marionette
 *Italian: [[marionetta]] ''f''
+*{{ja}}: [[絡繰り人形]] (からくりにんぎょう, karakuri ningyou)
 *Russian: [[марионетка]] (marionjetka)
 *Slovak: [[bábka]] ''f''
 *Spanish: [[marioneta]] ''f''
