--- a/wiki/urine.wikitext
+++ b/wiki/urine.wikitext
@@ -13,7 +13,10 @@
 ====Translations====
 *Chinese Characters: [[尿]], [[尿]]
 *Dutch: urine
+*French: urine ''f''
 *German: [[Urin]] ''m''
+*Italian: [[orina]] ''f'', urina ''f''
+*Japanese: [[尿]], [[小便]]
 *Latin: [[urina]]
 *Portuguese: [[urina]]
 *{{sk}}: [[moč#Slovak|moč]] ''m''
