--- a/wiki/doll.wikitext
+++ b/wiki/doll.wikitext
@@ -18,7 +18,7 @@
 *German: [[Puppe]] ''f''
 *Greek: [[κούκλα]] ''f'' (koúkla)
 *Italian: [[bambola]] ''f''
-*Japanese: [[人形]]
+*Japanese: [[人形]] (にんぎょう, ningyou)
 *Korean: [[인형]]
 *Portuguese: [[boneca]] ''f''
 *Russian: [[кукла]] ''f'' (kukla)
