--- a/wiki/volcano.wikitext
+++ b/wiki/volcano.wikitext
@@ -7,6 +7,7 @@
 ===Translations===
 *French: [[volcan]] ''m''
 *Italian: [[vulcano]] ''m''
+*{{nl}}: [[vulkaan]]
 *Japanese: [[火山]]
 
 ===Related terms===
