--- a/wiki/volcano.wikitext
+++ b/wiki/volcano.wikitext
@@ -5,10 +5,10 @@
 #A [[mountain]] that contains a [[magma]] chamber attached to the [[mantle]] of the [[planet]] or [[moon]] and which periodically [[erupt]]s forth, usually explosively, with [[lava]] and volcanic [[gas]]es.
 
 ===Translations===
-*French: [[volcan]] ''m''
-*Italian: [[vulcano]] ''m''
+*{{fr}}: [[volcan]] ''m''
+*{{it}}: [[vulcano]] ''m''
 *{{nl}}: [[vulkaan]]
-*Japanese: [[火山]]
+*{{ja}}: [[火山]]
 
 ===Related terms===
 *[[volcanic]]
