--- a/wiki/column.wikitext
+++ b/wiki/column.wikitext
@@ -1,10 +1,11 @@
-==Noun==
+==English==
+===Noun===
 '''column'''
 
 # upright supporting [[beam]]
 # a line of entries in a [[table]], etc., going from [[top]] to [[bottom]]; as opposed to a [[row]] going from [[left]] to [[right]].
 # anything having similar form or structure to 1. or 2. eg a column of troops, a newspaper column, spinal column etc.
 
-===Translations===
+====Translations====
 
 *[[Finnish]]: [[pylväs]] (1), [[sarake]] (2)
