--- a/wiki/landslide.wikitext
+++ b/wiki/landslide.wikitext
@@ -1,3 +1,6 @@
 ==English==
 ===Noun===
 #A natural [[disaster]] that involves the breakup and downhill flow of [[rock]], [[mud]], [[water]] and anything caught in the path.
+
+{{-trans-}}
+* {{nl}}: [[lawine]]
