--- a/wiki/stag.wikitext
+++ b/wiki/stag.wikitext
@@ -4,7 +4,7 @@
 
 '''stag'''
 
-#The adult [[male]] of the red [[deer]] (Cervus elaphus), a large European species closely related to the American [[elk]], or wapiti.
+#The adult [[male]] of the red [[deer]] (''Cervus elaphus''), a large European species closely related to the American [[elk]], or wapiti.
 #The male of certain other [[species]] of large deer.
 #A [[colt]], or [[filly]]; also, a romping girl.
 #A castrated [[bull]]; -- called also bull stag, and bull seg. See the Note under [[Ox]].
