--- a/wiki/day.wikitext
+++ b/wiki/day.wikitext
@@ -14,9 +14,13 @@ From Middle Engish [[dai]], [[day]], from Old English [[dæg]]. Cognates include
 #Period of day(3) between sunrise and sunset, where one enjoys daylight.  Daytime. Re:"day and night"
 
 ====Derived terms====
+*[[daybreak]]
 *[[daily]]
 *[[daylight]]
+*[[day return]]
+*[[daystar]]
 *[[daytime]]
+*[[day trip]]
 
 ====Translations====
 *[[Afrikaans]]: [[dag]]
@@ -42,7 +46,7 @@ From Middle Engish [[dai]], [[day]], from Old English [[dæg]]. Cognates include
 *[[Irish]]: [[lá]]
 *Italian: [[giorno]]
 *[[Interlingua]]: [[die]]
-*Japanese: [[日]] (ひ, hi, にち, nichi) (1), [[曜日]] (ようび, yōbi) (2)
+*Japanese: [[日]] ([[ひ]], hi, にち, nichi) (1); [[曜日]] (ようび, yōbi) (2); [[昼]] ([[ひる]], hiru), [[昼間]] (ひるま, hiruma), [[日中]] (にっちゅう, nitchuu)
 *Latin: [[dies]] ''m,f''
 *Lithuanian: [[diena]]
 *[[Lojban]]: [[djedi]] (1,2), [[donri]] (3)
