--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -16,6 +16,7 @@
 *French: [[prier]]
 *Italian: [[pregare]]
 *Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
+*{{nl}}: [[bidden]]
 
 ===Related terms===
 *[[prayer]]
