--- a/wiki/meal.wikitext
+++ b/wiki/meal.wikitext
@@ -2,8 +2,8 @@
 ===Noun===
 '''meal''' (countable and uncountable; plural: [[meals]])
 
-# (''countable'') food that you eat, usually at a specific time
-# (''uncountable'') {{stub}}<!-- related to cereals, grains... -->
+# (''countable'') [[food]] that is prepared and [[eat]]en, usually at a specific time
+# (''uncountable'') various [[grain]]s prepared for feeding to [[animal]]s
 
 ====Derived terms====
 *[[mealy]]
