--- a/wiki/challenge.wikitext
+++ b/wiki/challenge.wikitext
@@ -3,5 +3,11 @@
 #An [[instigation]] or [[antagonization]] intended to convince a [[person]] to perform an [[action]] they otherwise would not.
 #A [[difficult]] [[task]]
 
+===Translation===
+*{{nl}}: uitdaging
+
 ===Verb===
 #To instigate or antagonize in order to convince a person to do something
+
+===Translation===
+*{{nl}}: uitdagen
