--- a/wiki/challenge.wikitext
+++ b/wiki/challenge.wikitext
@@ -4,10 +4,10 @@
 #A [[difficult]] [[task]]
 
 ===Translation===
-*{{nl}}: uitdaging
+*{{nl}}: [[uitdaging]]
 
 ===Verb===
 #To instigate or antagonize in order to convince a person to do something
 
 ===Translation===
-*{{nl}}: uitdagen
+*{{nl}}: [[uitdagen]]
