--- a/wiki/instance.wikitext
+++ b/wiki/instance.wikitext
@@ -2,3 +2,6 @@
 ===Noun===
 #A [[point]] at which a set of [[circumstance]]s [[exist]]s
 #An individual set of circumstances
+
+===Translation===
+*{{nl}}: [[voorbeeld]] (1,2)
