--- a/wiki/wait.wikitext
+++ b/wiki/wait.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 *'''Finnish:''' [[odottaa]] (1), [[tarjoilla]] (2)
+*{{ja}}: [[待つ]] (まつ, matsu), [[待って]] (まって, matte)
 *'''Swedish:''' [[vänta]] (1) ([[:sv:vänta|Swedish]])
 
 ==Related Terms==
