--- a/wiki/commercial.wikitext
+++ b/wiki/commercial.wikitext
@@ -1,6 +1,11 @@
 ==English==
 ===Noun===
 #An [[advertisement]] in a common [[media]] format, usually [[television]].
+===Translation===
+*{{nl}}: [[reclame spotje]]
+
 
 ===Adjective===
 #A [[money]] making endeavor that involves a [[corporation]] or other formalized group of [[worker]]s and [[management]] [[work]]ing toward the production of [[goods]] or [[services]] to participate in an [[economy]]
+===Translation===
+*{{nl}}: [[commercieel]]
