--- a/wiki/cookbook.wikitext
+++ b/wiki/cookbook.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 
-# A book or an [[encyclopedia]] full of [[recipes]].
+# A book or an [[encyclopedia]] full of [[recipe]]s.
 
 ===[[Translations]]===
 
