--- a/wiki/countable.wikitext
+++ b/wiki/countable.wikitext
@@ -2,7 +2,7 @@
 
 === Adjective ===
 
-# Capable of being [[count]]ed
+# Capable of being [[count]]ed, a [[quantity]]
 # (''grammar'') A noun which can fill the blank in "There were ''N'' ___" for any number ''N'' (''cf.'' [[mass noun]] [[plurale tantum]])
 # (''mathematics'') Having a [[bijection]] with a subset of the [[natural numbers]], or sometimes, having a bijection with just the [[natural numbers]]
 
