--- a/wiki/beam.wikitext
+++ b/wiki/beam.wikitext
@@ -1,7 +1,5 @@
 ==English==
-
 ===Noun===
-
 '''beam'''
 
 #Any large [[piece]] of [[timber]] or [[iron]] long in proportion to its thickness, and prepared for use.
@@ -17,3 +15,7 @@
 #A [[ray]] or [[collection]] of parallel [[ray]]s emitted from the sun or other luminous body; as, a beam of [[light]], or of heat.
 #Fig.: A ray; a [[gleam]]; as, a beam of comfort.
 #One of the long [[feather]]s in the wing of a [[hawk]]; -- called also beam feather.
+
+===Translations===
+*Italian: [[raggio]] ''m'', [[trave]] ''f''
+*Japanese: [[梁]] ([[はり]], りょう), [[光線]]
