--- a/wiki/enter.wikitext
+++ b/wiki/enter.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 *French: [[entrer]]
 *Italian: [[entrare]]
+*{{ja}}: [[入る]] (はいる, hairu), [[入]] (にゅう, nyuu)
 
 ===Transitive verb===
 '''to enter''' ([[enters]], [[entered]], [[entering]])
@@ -20,6 +21,7 @@
 ====Translations====
 *French: [[entrer]]
 *Italian: [[entrare]]
+*{{ja}}: [[入る]] (はいる, hairu), [[入]] (にゅう, nyuu)
 
 ===Derived terms===
 *[[entrance]]
