--- a/wiki/ocean.wikitext
+++ b/wiki/ocean.wikitext
@@ -23,7 +23,7 @@ From Latin '''[[Oceanus]]''', from Greek '''[[Okeanos]]'''; originally a proper 
 *Latin: [[Oceanus]]
 *Lithuanian: [[okeanas]] ''m'', [[vandenynas]] ''m''
 *Japanese: [[大洋]] ([[たいよう]]), [[海洋]] ([[かいよう]])
-*Polish: [[ocean]] ''m''
+*Polish: ocean ''m''
 *Portuguese: [[oceano]] ''m''
 *Slovene: ocean ''m''
 *Spanish: [[océano]] ''m''
